Adiciona Dockerfile, docker-compose e ajustes no Prisma

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,15 +8,19 @@ services:
       - .env
     depends_on:
       - db
+    volumes:
+      - ./src:/app/src         # código fonte
+      - ./prisma:/app/prisma   # pasta do prisma
+      - /app/node_modules      # protege node_modules no container
     command: sh -c "npx prisma generate && npx prisma migrate deploy && npm run dev"
 
   db:
     image: postgres:16
     container_name: postgres-db
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: apiaprendizado
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - "5432:5432"
     volumes:
@@ -24,3 +28,4 @@ services:
 
 volumes:
   postgres_data:
+  
