--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "bcrypt": "^6.0.0",
     "express": "^5.2.1",
     "prisma": "^6.19.2",
+    "swagger-ui-express": "^5.0.1",
     "tsx": "^4.21.0",
     "yup": "^1.7.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.6",
+    "@types/swagger-ui-express": "^4.1.8",
     "typescript": "^5.9.3"
   }
 }
