--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@apidevtools/swagger-parser": "^12.1.0",
     "@prisma/client": "^6.19.2",
     "bcrypt": "^6.0.0",
     "express": "^5.2.1",
@@ -24,6 +25,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.6",
     "@types/swagger-ui-express": "^4.1.8",
+    "swagger-cli": "^4.0.4",
     "typescript": "^5.9.3"
   }
 }
